@@ -23,9 +23,11 @@
 from . import ClusteringMethod
 from . import ClusterCollection
 
-__all__ = [
-    'ClusterCollection.ClusterCollection',
-    'ClusterCollection.Cluster',
-    'ClusteringMethod.AffinityPropagationNative'
-    'ClusteringMethod.AffinityPropagation'
-    'ClusteringMethod.DBSCAN']
+from .ClusteringMethod import AffinityPropagationNative
+from .ClusterCollection import ClusterCollection, Cluster
+
+__all__ = ['ClusterCollection', 'Cluster', 'AffinityPropagationNative']
+
+if ClusteringMethod.sklearn:
+    from .ClusteringMethod import AffinityPropagation, DBSCAN
+    __all__ += ['AffinityPropagation', 'DBSCAN']
