@@ -24,7 +24,15 @@
 Test the user facing API is as we expect...
 """
 
+import importlib
+import os
+from pathlib import PurePath
+
+import pytest
+from numpy.testing import assert_equal
+
 import MDAnalysis as mda
+mda_dirname = os.path.dirname(mda.__file__)
 
 
 def test_Universe():
@@ -49,3 +57,26 @@ def test_ResidueGroup():
 
 def test_SegmentGroup():
     assert mda.SegmentGroup is mda.core.groups.SegmentGroup
+
+
+def init_files():
+    """A generator yielding all MDAnalysis __init__ files."""
+    os.chdir(mda_dirname)
+    for root, dirs, files in os.walk("."):
+        if "__init__.py" in files:
+            submodule = ".".join(PurePath(root).parts)
+            submodule = "."*(len(submodule) > 0) + submodule
+            yield submodule
+
+
+@pytest.mark.parametrize('submodule', init_files())
+def test_all_import(submodule):
+    module = importlib.import_module("MDAnalysis" + submodule)
+    module_path = os.path.join(mda_dirname, *submodule.split("."))
+    if hasattr(module, "__all__"):
+        missing = [name for name in module.__all__
+                if name not in module.__dict__.keys()
+                    and name not in [os.path.splitext(f)[0] for
+                                        f in os.listdir(module_path)]]
+        assert_equal(missing, [], err_msg="{}".format(submodule) +
+                                          "has errors in __all__ list.")
